css/base.css
.fluid {
     width: 100%;
     height: auto;
 }

 a {
     text-decoration: none;
     color: inherit;
 }

 img {
     margin-bottom: -5px;
 }

 *,
 *::before,
 *::after {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
            box-sizing: border-box;
    -webkit-transition: all .27s ease, color 0s, visibility 0s;
         -o-transition: all .27s ease, color 0s, visibility 0s;
            transition: all .27s ease, color 0s, visibility 0s;
    -webkit-transition: all .27s cubic-bezier(0.4, 0.0, 0.2, 1), color 0s, visibility 0s;
         -o-transition: all .27s cubic-bezier(0.4, 0.0, 0.2, 1), color 0s, visibility 0s;
            transition: all .27s cubic-bezier(0.4, 0.0, 0.2, 1), color 0s, visibility 0s;
             
     /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;
    
    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;

    /* Support for IE. */
    -webkit-font-feature-settings: 'liga';
       -moz-font-feature-settings: 'liga';
            font-feature-settings: 'liga';
 }

 *:not(.fa):not(.material-icons),
 *:not(.fa):not(.material-icons)::before,
 *:not(.fa):not(.material-icons)::after {
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none; 
}
::selection {
    background: #b3d4fc;
    text-shadow: none; 
}

 /* Remove the unwanted box around FAB buttons */
 /* More info: http://goo.gl/IPwKi */
 a,
.accordion,
.button,
.card,
.dropdown,
.dropdown-hover,
.icon-toggle,
.nav__item,
.footer__item,
.dropdown__item,
.tab__item,
.checkbox,
.radio,
.switch,
.slider {
     -webkit-tap-highlight-color: transparent;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }

 /*
 * Make html take up the entire screen
 * Then set touch-action to avoid touch delay on mobile IE
 */
 html {
     width: 100%;
     height: 100%;
     -ms-touch-action: manipulation;
         touch-action: manipulation;
 }
    
 /*
* Make body take up the entire screen
* Remove body margin so layout containers don't cause extra overflow.
*/
 body {
     width: 100%;
     min-height: 100%;
 }
    
 /*
 * Main display reset for IE support.
 * Source: http://weblog.west-wind.com/posts/2015/Jan/12/main-HTML5-Tag-not-working-in-Internet-Explorer-91011
 */
 main {
     display: block;
 }

 @media screen and (max-width: 47.9999em) {
     .hide-sm {
         display: none!important;
     }
 }

 @media screen and (min-width: 48em) and (max-width: 63.9999em) {
     .hide-md {
         display: none!important;
     }
 }

 @media screen and (min-width: 64em) and (max-width: 79.9999em) {
     .hide-lg {
         display: none!important;
     }
 }

 @media screen and (min-width: 80em) {
     .hide-xl {
         display: none!important;
     }
 }

 .no-scroll {
     overflow: hidden;
 }

 h1,
.h1 {
  font-size: 112px!important;
  font-weight: 300;
  line-height: 1;
  letter-spacing: -0.04em;
}

h1.contrast,
.h1.contrast {
  opacity: 0.54; 
}

h2,
.h2 {
  font-size: 56px!important;
  font-weight: 400;
  line-height: 1.35;
  letter-spacing: -0.02em; 
}

h2.contrast,
.h2.contrast {
  opacity: 0.54; 
}

h3,
.h3 {
  font-size: 45px!important;
  font-weight: 400;
  line-height: 48px; }

h3.contrast,
.h3.contrast {
  font-size: 45px!important;
  font-weight: 400;
  line-height: 48px;
  opacity: 0.54; }

h4,
.h4 {
  font-size: 34px!important;
  font-weight: 400;
  line-height: 40px; }

h4.contrast,
.h4.contrast {
  font-size: 34px!important;
  font-weight: 400;
  line-height: 40px;
  opacity: 0.54; }

h5,
.h5,
.headline {
  font-size: 24px!important;
  font-weight: 400;
  line-height: 32px;
  -moz-osx-font-smoothing: grayscale; 
}

h5.contrast,
.h5.contrast,
.headline.contrast {
  opacity: 0.87; 
}

h6,
.h6,
.title {
  font-size: 20px!important;
  font-weight: 500;
  line-height: 1;
  letter-spacing: 0.02em; 
}

h6.contrast,
.h6.contrast,
.title.contrast {
  font-size: 20px!important;
  font-weight: 500;
  line-height: 1;
  letter-spacing: 0.02em;
  opacity: 0.87; }

.subheading {
  font-size: 16px!important;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0.04em; }

.subheading.contrast {
  font-size: 16px!important;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0.04em;
  opacity: 0.87; }

.caption {
  font-size: 12px!important;
  font-weight: 400;
  line-height: 1;
  letter-spacing: 0; 
 }

